# dagster-and-r

./: .env.example  README.md  dagster-and-r.Rproj  pyproject.toml  setup.py
dagster_and_r/: assets.py  definitions.py  pins_assets.py  resources.py
dagster_and_r/R/: iris.R  read_pin.R
dagster_and_r_tests/: test_r.py
reports/: reading-from-pins-example.qmd
