[project]
name = "dagster-and-r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster-pandas>=0.25.4",
    "dagster>=1.9.4",
    "dagster-docker>=0.25.4",
    "dagster-pipes>=1.9.4",
    "dagster-webserver>=1.9.4",
    "pandas>=2.2.3",
    "pins>=0.8.7",
    "python-dotenv>=1.0.1",
    "s3fs>=2024.10.0",
]
